# bcp

./: Cargo.toml  README.md  release.toml
.github/workflows/: build.yml  release.yml
docs/: RELEASING.md
src/: app.rs  auth.rs  cache.rs  config.rs  events.rs  library.rs  main.rs  state.rs
src/app/: draw.rs  input.rs  mod.rs  playback.rs  update.rs
src/bandcamp/: client.rs  mod.rs  models.rs
src/player/: engine.rs  mod.rs  queue.rs  waveform.rs
src/ui/: logo.rs  mod.rs  theme.rs  widgets.rs
src/ui/views/: album.rs  artist_column.rs  collection.rs  downloaded.rs  mod.rs  now_playing.rs  queue.rs  queue_view.rs  settings.rs
tests/fixtures/: test.flac
